# core-profile

./: .gitignore  .sample_env  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose-prod.yml
schemas/: delete_profile.capnp  ip_lookup.capnp  profile.capnp  profile_edit.capnp  profile_entity.capnp  profile_photo.capnp  rust.capnp
src/: main.rs
src/adapters/: mod.rs
src/adapters/graphql/: mod.rs
src/adapters/profile/: data_loaders.rs  inputs.rs  mappers.rs  mod.rs  mutation.rs  objects.rs  query.rs
src/adapters/shared/: state.rs
src/domain/: mod.rs
src/domain/entities/: ip_entity.rs  mod.rs  profile.rs
src/domain/events/: mod.rs
src/domain/events/aggregation/: check_ip_event_producer.rs  mod.rs  profile_edit_event_producer.rs
src/domain/events/mappers/: check_ip_mapper.rs  delete_profile_mapper.rs  mod.rs  profile_detail_mapper.rs  profile_edit_mapper.rs  profile_event_mapper.rs  profile_photo_mapper.rs  verify_mapper.rs
src/domain/mappers/: graphql_mapper.rs  mod.rs  profile_entity_mapper.rs
src/domain/protos/: schema.rs
src/domain/usecases/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/aws/: cloud_front_client.rs  mod.rs
src/infrastructure/kafka/: mod.rs
src/infrastructure/redis/: config.rs
src/infrastructure/scylladb/: connection.rs  initialization.rs  mod.rs
src/persistence/repositories/: mod.rs  profile_repository.rs  profile_repository_interface.rs  redis_repository.rs  redis_repository_interface.rs  reducer_repository.rs  reducer_repository_interface.rs
src/utils/: errors.rs  mod.rs  test.rs
(+29 files in other folders)
