[package]
name = "blumer-ms-profile"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.61"
async-graphql = { version = "6.0.3", features = ["dataloader", "chrono", "chrono-tz", "uuid"] }
async-graphql-actix-web = "6.0.3"
async-trait = "0.1.58"
blumer-lib-auth-rs = { path = "deps/blumer-lib-auth-rs"}
blumer-lib-errors = { path = "deps/blumer-lib-errors", features = ["scylla_db"]}
blumer-lib-authorization-rs = { path = "deps/blumer-lib-authorization-rs"}
capnp = { version = "0.17.2", features = [] }
chrono = { version = "0.4.22", features = ["serde"] }
cloudfront_sign = "0.2.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
thiserror = "1.0.37"
futures = "0.3.24"
lazy_static = "1.4.0"
log = "0.4.17"
mockall = "0.11.3"
num-traits = "0.2.15"
rand = "0.8.5"
rdkafka = { version = "0.33.2", features = ["cmake-build", "ssl", "sasl"] }
redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager", "cluster-async"] }
regex = "1.9.0"
scylla = "0.9.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
strum_macros = "0.25.2"
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[build-dependencies]
capnpc = "0.17.1"
